--- a/app/src/main/res/layout/fragment_fclv_item.xml
+++ b/app/src/main/res/layout/fragment_fclv_item.xml
@@ -48,4 +48,12 @@
         android:text="评论"
         app:layout_constraintEnd_toEndOf="@+id/comment"
         app:layout_constraintTop_toBottomOf="@+id/comment" />
+
+    <Button
+        android:id="@+id/delete_button"
+        android:layout_width="72dp"
+        android:layout_height="40dp"
+        android:text="删除"
+        app:layout_constraintEnd_toEndOf="@+id/comment"
+        app:layout_constraintTop_toBottomOf="@+id/comment" />
 </androidx.constraintlayout.widget.ConstraintLayout>
