--- a/app/src/main/res/layout/fragment_message_content.xml
+++ b/app/src/main/res/layout/fragment_message_content.xml
@@ -10,12 +10,14 @@
         style="@style/Widget.AppCompat.TextView.SpinnerItem"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:background="@color/colorTheme"
         android:gravity="center"
         android:text="龙宝"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/color1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+    <!--
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="45dp"
@@ -61,13 +63,12 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
-
+-->
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/input_message"
         android:layout_width="281dp"
         android:layout_height="44dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -81,27 +82,26 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="😀"
-        app:layout_constraintBottom_toBottomOf="@+id/button5"
-        app:layout_constraintEnd_toStartOf="@+id/button5" />
+        app:layout_constraintBottom_toBottomOf="@+id/send"
+        app:layout_constraintEnd_toStartOf="@+id/send" />
 
     <Button
-        android:id="@+id/button5"
-        android:layout_width="40dp"
+        android:id="@+id/send"
+        android:layout_width="60dp"
         android:layout_height="40dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="12dp"
-        android:text="⊕"
+        android:text="发送"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/textView3"
+    <ListView
+        android:id="@+id/mc_lv"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="630dp"
         android:layout_marginTop="4dp"
-        android:background="@color/color2"
-        android:text="TextView"
+        android:divider="#0000"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/m_user_name" />
 
