--- a/app/src/main/res/layout/comment_review.xml
+++ b/app/src/main/res/layout/comment_review.xml
@@ -7,11 +7,11 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/reviewd_task_ID"
+        android:id="@+id/review_comment_ID"
         android:layout_width="0dp"
         android:layout_height="0dp" />
     <TextView
-        android:id="@+id/reviewd_sponsor"
+        android:id="@+id/review_comment_sponsor"
         android:layout_width="60dp"
         android:layout_height="20dp"
         android:layout_marginStart="27dp"
@@ -22,60 +22,60 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
-        android:id="@+id/reviewd_sponsor_detail"
+        android:id="@+id/review_comment_sponsor_detail"
         android:layout_width="290dp"
         android:layout_height="20dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="0dp"
         android:background="#FFFFFF"
-        app:layout_constraintStart_toStartOf="@id/reviewd_sponsor"
+        app:layout_constraintStart_toStartOf="@id/review_comment_sponsor"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/reviewd_type"
+        android:id="@+id/review_comment_theme"
         android:layout_width="60dp"
         android:layout_height="20dp"
         android:layout_marginStart="27dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:background="#FFFFFF"
-        android:text="类型"
+        android:text="主题"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
-        android:id="@+id/reviewd_type_text"
+        android:id="@+id/review_comment_theme_text"
         android:layout_width="290dp"
         android:layout_height="20dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="20dp"
         android:background="#FFFFFF"
-        app:layout_constraintStart_toStartOf="@id/reviewd_type"
+        app:layout_constraintStart_toStartOf="@id/review_comment_theme"
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
-        android:id="@+id/reviewd_location"
+        android:id="@+id/review_comment_last"
         android:layout_width="60dp"
         android:layout_height="20dp"
         android:layout_marginStart="27dp"
         android:layout_marginTop="20dp"
         android:background="#FFFFFF"
-        android:text="@string/TR_location"
+        android:text="上一级"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/reviewd_type"/>
+        app:layout_constraintTop_toTopOf="@id/review_comment_theme"/>
 
     <TextView
-        android:id="@+id/reviewd_location_detail"
+        android:id="@+id/review_comment_last_detail"
         android:layout_width="290dp"
         android:layout_height="20dp"
         android:layout_marginStart="60dp"
         android:background="#FFFFFF"
         android:layout_marginTop="40dp"
-        app:layout_constraintStart_toStartOf="@id/reviewd_location"
-        app:layout_constraintTop_toTopOf="@id/reviewd_sponsor_detail" />
+        app:layout_constraintStart_toStartOf="@id/review_comment_last"
+        app:layout_constraintTop_toTopOf="@id/review_comment_sponsor_detail" />
 
     <TextView
-        android:id="@+id/reviewd_task_time"
+        android:id="@+id/review_comment_time"
         android:layout_width="60dp"
         android:layout_height="20dp"
         android:layout_marginStart="27dp"
@@ -83,20 +83,20 @@
         android:background="#FFFFFF"
         android:text="时间"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/reviewd_sponsor"/>
+        app:layout_constraintTop_toTopOf="@id/review_comment_sponsor"/>
 
     <TextView
-        android:id="@+id/reviewd_task_time_detail"
+        android:id="@+id/review_comment_time_detail"
         android:layout_width="290dp"
         android:layout_height="20dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="20dp"
         android:background="#FFFFFF"
-        app:layout_constraintStart_toStartOf="@id/reviewd_task_time"
-        app:layout_constraintTop_toTopOf="@id/reviewd_location_detail" />
+        app:layout_constraintStart_toStartOf="@id/review_comment_time"
+        app:layout_constraintTop_toTopOf="@id/review_comment_last_detail" />
 
     <TextView
-        android:id="@+id/reviewd_content"
+        android:id="@+id/review_comment_content"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginStart="27dp"
@@ -104,36 +104,36 @@
         android:background="#FFFFFF"
         android:text="内容"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/reviewd_sponsor"/>
+        app:layout_constraintTop_toTopOf="@id/review_comment_sponsor"/>
 
     <TextView
-        android:id="@+id/reviewd_content_detail"
+        android:id="@+id/review_comment_content_detail"
         android:layout_width="290dp"
         android:layout_height="60dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="20dp"
         android:background="#FFFFFF"
-        app:layout_constraintStart_toStartOf="@id/reviewd_content"
-        app:layout_constraintTop_toTopOf="@id/reviewd_task_time_detail" />
-
-    <TextView
-        android:id="@+id/reviewd_status"
-        android:layout_width="60dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="140dp"
-        android:background="#FFFFFF"
-        android:text="审核结果"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/reviewd_sponsor"/>
-    <TextView
-        android:id="@+id/reviewd_status_detail"
-        android:layout_width="290dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="60dp"
+        app:layout_constraintStart_toStartOf="@id/review_comment_content"
+        app:layout_constraintTop_toTopOf="@id/review_comment_time_detail" />
+    <Button
+        android:id="@+id/review_comment_success"
+        android:text="通过审核"
+        android:background="@drawable/btn_circle"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="60dp"
-        android:background="#FFFFFF"
-        app:layout_constraintStart_toStartOf="@id/reviewd_status"
-        app:layout_constraintTop_toTopOf="@id/reviewd_content_detail" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/review_comment_content_detail" />
 
+    <Button
+        android:id="@+id/review_comment_fail"
+        android:text="不通过审核"
+        android:background="@drawable/btn_circle"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="230dp"
+        android:layout_marginTop="60dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/review_comment_content_detail" />
 </androidx.constraintlayout.widget.ConstraintLayout>
