--- a/app/src/main/res/layout/fragment_mclv_item.xml
+++ b/app/src/main/res/layout/fragment_mclv_item.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="left"
         android:orientation="horizontal">
 
         <ImageView
@@ -20,9 +21,11 @@
 
         <LinearLayout
             android:id="@+id/left_layout"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="left"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="50dp"
             android:background="@drawable/left_message">
 
             <TextView
@@ -38,14 +41,16 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/right_layout"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="right"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/right_message">
 
             <TextView
@@ -54,14 +59,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
-                android:textColor="#fff"/>
+                android:textColor="#fff" />
 
         </LinearLayout>
+
         <ImageView
             android:id="@+id/head_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/right_head"/>
+            android:layout_gravity="right"
+            android:src="@drawable/right_head" />
     </LinearLayout>
 
 </LinearLayout>
