--- a/app/src/main/res/layout/fragment_message_content.xml
+++ b/app/src/main/res/layout/fragment_message_content.xml
@@ -66,7 +66,7 @@
 -->
     <EditText
         android:id="@+id/input_message"
-        android:layout_width="281dp"
+        android:layout_width="340dp"
         android:layout_height="44dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
@@ -76,7 +76,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/emoji"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
