--- a/app/src/main/res/layout/fragment_mwlv_item.xml
+++ b/app/src/main/res/layout/fragment_mwlv_item.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/left_head" />
 
     <TextView
         android:id="@+id/user_name"
