--- a/app/src/main/res/layout/mine_publish_item.xml
+++ b/app/src/main/res/layout/mine_publish_item.xml
@@ -7,6 +7,10 @@
     android:layout_height="match_parent">
 
     <TextView
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:id="@+id/pub_task_ID"/>
+    <TextView
         android:id="@+id/pub_type"
         android:layout_width="60dp"
         android:layout_height="20dp"
@@ -132,26 +136,46 @@
         android:background="#FFFFFF"
         app:layout_constraintStart_toStartOf="@id/pub_recipient"
         app:layout_constraintTop_toTopOf="@id/pub_content_detail" />
+    <TextView
+        android:id="@+id/pub_review"
+        android:layout_width="60dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="160dp"
+        android:background="#FFFFFF"
+        android:text="审核状态"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/pub_type"/>
+
+    <TextView
+        android:id="@+id/pub_review_detail"
+        android:layout_width="290dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="100dp"
+        android:background="#FFFFFF"
+        app:layout_constraintStart_toStartOf="@id/pub_review"
+        app:layout_constraintTop_toTopOf="@id/pub_content_detail" />
 
     <Button
         android:id="@+id/pub_chat_with_task_sponsor"
         android:text="确认完成"
-        android:background="#EFAA52"
+        android:background="@drawable/btn_circle"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/pub_content_detail" />
 
     <Button
         android:id="@+id/pub_accept_task"
         android:text="删除"
-        android:background="#EFAA52"
+        android:background="@drawable/btn_circle"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_marginStart="240dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/pub_content_detail" />
 </androidx.constraintlayout.widget.ConstraintLayout>
