--- a/app/src/main/res/layout/detail_main.xml
+++ b/app/src/main/res/layout/detail_main.xml
@@ -37,80 +37,100 @@
                  android:textSize="20sp"/>-->
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:paddingBottom="10dp">
-            <ImageView
-                android:id="@+id/Iv"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentLeft="true"
-                android:src="@drawable/ic_notifications_black_24dp"
-                />
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/Iv"
-                android:textSize="22sp"
-                android:textColor="#000000"
-                android:paddingLeft="5dp"
-                android:text="我的昵称" />
-
-
-        </RelativeLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="#D5D5D5"/>
-        <TextView
-            android:padding="4dp"
-            android:id="@+id/tv_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:ellipsize="end"
-            android:textColor="#000000"
-            android:text="这里标题"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="#D5D5D5"/>
-        <TextView
-            android:padding="4dp"
-            android:id="@+id/tv_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:ellipsize="end"
-            android:textColor="#000000"
-            android:text="这里消息"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="#D5D5D5"/>
-        <ImageView
-            android:padding="2dp"
-            android:id="@+id/Iv2"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/num1"
-            />
+            android:orientation="vertical"
+            android:scrollbars="none">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:paddingBottom="10dp">
+                    <ImageView
+                        android:id="@+id/Iv"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_alignParentLeft="true"
+                        android:src="@drawable/ic_notifications_black_24dp"
+                        />
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/Iv"
+                        android:textSize="22sp"
+                        android:textColor="#000000"
+                        android:paddingLeft="5dp"
+                        android:text="我的昵称" />
+                    <TextView
+                        android:id="@+id/cardDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/name"
+                        android:layout_toRightOf="@+id/Iv"
+                        android:textSize="15sp"
+                        android:textColor="#6F6F6F"
+                        android:paddingLeft="5dp"
+                        android:text="2020-06-06" />
+
+                </RelativeLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="#D5D5D5"/>
+                <TextView
+                    android:padding="4dp"
+                    android:id="@+id/tv_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:ellipsize="end"
+                    android:textColor="#000000"
+                    android:text="这里标题"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="#D5D5D5"/>
+                <TextView
+                    android:padding="4dp"
+                    android:id="@+id/tv_message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:ellipsize="end"
+                    android:textColor="#000000"
+                    android:text="这里消息"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="#D5D5D5"/>
+                <ImageView
+                    android:padding="2dp"
+                    android:id="@+id/Iv2"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:layout_gravity="center"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/ic_cancel_black_24dp"
+                    />
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
