--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -21,8 +21,8 @@
 
             <Button
                 android:id="@+id/title_data1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_height="62dp"
                 android:layout_gravity="center"
                 android:layout_margin="7dp"
                 android:layout_marginLeft="60dp"
@@ -43,20 +43,31 @@
                 android:textColor="#FFFFFF"
                 android:textSize="20sp" />
         </LinearLayout>
-
-        <EditText
-            android:id="@+id/editText"
+        <LinearLayout
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:paddingTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"
-            android:background="#ffffff"
-            android:ems="10"
-            android:gravity="center"
-            android:inputType="textPersonName"
-            android:text="搜索" />
-
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <EditText
+                android:id="@+id/search"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="搜索"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_width="wrap_content" />
+            <Button
+                android:id="@+id/search_button"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:paddingLeft="17dp"
+                android:drawableStart="@drawable/search"
+                android:background="@drawable/btn_circle"/>
+        </LinearLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -78,6 +89,7 @@
             </Spinner>
 
             <Button
+                android:id="@+id/paixu"
                 android:layout_width="80dp"
                 android:layout_height="20dp"
                 android:layout_marginLeft="75dp"
@@ -87,7 +99,14 @@
                 android:drawableRight="@drawable/paixu"
                 android:text="排序" />
         </RelativeLayout>
-
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="550dp"
+            android:textSize="30dp"
+            android:text="当前分类暂无资讯"
+            android:id="@+id/show"
+            android:gravity="center"/>
         <ListView
             android:id="@+id/listView"
             android:layout_width="wrap_content"
