--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/cardImg"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:src="@drawable/image1"
             />
@@ -26,7 +26,19 @@
             android:textColor="#000000"
             android:paddingLeft="5dp"
             android:text="我的昵称" />
+        <TextView
+            android:id="@+id/cardDate"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/cardSource"
+            android:layout_toRightOf="@+id/cardImg"
+            android:textSize="15sp"
+            android:textColor="#6F6F6F"
+            android:paddingLeft="5dp"
+            android:text="2020-06-06" />
     </RelativeLayout>
+
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -34,7 +46,6 @@
         android:layout_marginBottom="10dp"
         android:background="#D5D5D5"/>
     <TextView
-
         android:id="@+id/cardTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
