--- a/app/src/main/res/layout/fragment_dashboard_task_item.xml
+++ b/app/src/main/res/layout/fragment_dashboard_task_item.xml
@@ -8,6 +8,17 @@
 
 
     <TextView
+        android:id="@+id/task_id"
+        android:layout_width="60dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="0dp"
+        android:background="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
         android:id="@+id/task_sponsor"
         android:layout_width="60dp"
         android:layout_height="20dp"
@@ -138,7 +149,7 @@
     <Button
         android:id="@+id/chat_with_task_sponsor"
         android:text="@string/chat_with_sponsor_button"
-        android:background="#EFAA52"
+        android:background="@drawable/btn_circle"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_marginStart="50dp"
@@ -149,7 +160,7 @@
     <Button
         android:id="@+id/accept_task"
         android:text="@string/accept_TR"
-        android:background="#EFAA52"
+        android:background="@drawable/btn_circle"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_marginStart="160dp"
@@ -160,7 +171,7 @@
     <Button
         android:id="@+id/star_task"
         android:text="@string/star"
-        android:background="#EFAA52"
+        android:background="@drawable/btn_circle"
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_marginStart="270dp"
