--- a/app/src/main/res/layout/fragment_dashboard_new_task_resources.xml
+++ b/app/src/main/res/layout/fragment_dashboard_new_task_resources.xml
@@ -119,7 +119,7 @@
     <Button
         android:id="@+id/new_TR_save_button"
         android:text="@string/save"
-        android:background="#EFAA52"
+        android:background="@drawable/btn_circle"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginStart="50dp"
@@ -130,7 +130,7 @@
     <Button
         android:id="@+id/new_TR_cancel_button"
         android:text="@string/cancel"
-        android:background="#EFAA52"
+        android:background="@drawable/btn_circle"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginStart="240dp"
