--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -56,7 +56,7 @@
                 android:paddingBottom="10dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="搜索"
+                android:hint="搜索"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:layout_width="wrap_content" />
