--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
                 android:layout_marginEnd="24dp"
                 android:hint="Phone number"
                 android:selectAllOnFocus="true"
-                android:textColor="@color/cardview_light_background"
+                android:textColor="@color/colorBlack"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +81,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="30dp"
                 android:hint="@string/prompt_password"
+                android:textColor="@color/colorBlack"
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
