--- a/app/src/main/res/layout/mark_task.xml
+++ b/app/src/main/res/layout/mark_task.xml
@@ -11,6 +11,10 @@
         android:layout_height="0dp"
         android:id="@+id/mark_task_ID"/>
     <TextView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/mark_chat_ID"/>
+    <TextView
         android:id="@+id/mark_sponsor"
         android:layout_width="60dp"
         android:layout_height="20dp"
